force-app/main/default/objects/Reinsurer__c/Reinsurer__c.object-meta.xml
<CustomObject>
    <description>Reinsurer placement</description>
    <label>Reinsurer</label>
    <nameField>
        <displayFormat>RA-{000000000}</displayFormat>
        <label>Placement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reinsurers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>