force-app/main/default/objects/Reinsurer__c/fields/Authorized__c.field-meta.xml
<CustomField>
    <fullName>Authorized__c</fullName>
    <label>% Authorized</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>