force-app/main/default/objects/Reinsurer__c/fields/Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Brokerage__c</fullName>
    <label>Brokerage %</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>