force-app/main/default/objects/Reinsurer__c/fields/Layer_Placement__c.field-meta.xml
<CustomField>
    <fullName>Layer_Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>One Level Up Layer Placement</label>
    <referenceTo>Reinsurer__c</referenceTo>
    <relationshipLabel>Reinsurers</relationshipLabel>
    <relationshipName>Reinsurers</relationshipName>
    <type>Lookup</type>
</CustomField>