force-app/main/default/objects/Reinsurer__c/fields/Lead_Market_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Lead_Market_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Market Indicator</label>
    <type>Checkbox</type>
</CustomField>