force-app/main/default/objects/Reinsurer__c/fields/Next_Layer__c.field-meta.xml
<CustomField>
    <fullName>Next_Layer__c</fullName>
    <label>Next Layer</label>
    <type>TextArea</type>
</CustomField>