force-app/main/default/objects/Reinsurer__c/fields/One_Level_Up_Layer_Placement__c.field-meta.xml
<CustomField>
    <fullName>One_Level_Up_Layer_Placement__c</fullName>
    <formula>&quot; placeholder&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>One Level Up Layer Placement</label>
    <type>Text</type>
</CustomField>