force-app/main/default/objects/Reinsurer__c/fields/Opportunity_Account__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Account__c</fullName>
    <formula>Reinsurance_Contract__r.Opportunity__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Account</label>
    <type>Text</type>
</CustomField>