force-app/main/default/objects/Reinsurer__c/fields/Reinsurance_Contract__c.field-meta.xml
<CustomField>
    <fullName>Reinsurance_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reinsurance Contract</label>
    <referenceTo>Reinsurance_Contract__c</referenceTo>
    <relationshipLabel>Reinsurers</relationshipLabel>
    <relationshipName>Reinsurers</relationshipName>
    <type>Lookup</type>
</CustomField>