force-app/main/default/objects/Reinsurer__c/fields/Reinsurer__c.field-meta.xml
<CustomField>
    <fullName>Reinsurer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reinsurer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reinsurers</relationshipLabel>
    <relationshipName>Reinsurers</relationshipName>
    <type>Lookup</type>
</CustomField>