force-app/main/default/objects/Reinsurer__c/fields/Reinsurer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Reinsurer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reinsurer Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Reinsurer__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reinsurers</relationshipLabel>
    <relationshipName>Reinsurers</relationshipName>
    <type>Lookup</type>
</CustomField>