force-app/main/default/objects/Reinsurer__c/fields/Reinsurer_Name__c.field-meta.xml
<CustomField>
    <fullName>Reinsurer_Name__c</fullName>
    <formula>Reinsurer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reinsurer Name</label>
    <type>Text</type>
</CustomField>