force-app/main/default/objects/Reinsurer__c/fields/Reinsurer_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reinsurer_Reference_Number__c</fullName>
    <label>Reinsurer Reference Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>