force-app/main/default/objects/Reinsurer__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reinsurer</fullName>
                <default>true</default>
                <label>Reinsurer</label>
            </value>
            <value>
                <fullName>Correspondent Broker</fullName>
            </value>
            <value>
                <fullName>Lloyd&apos;s Manager</fullName>
            </value>
            <value>
                <fullName>Pool Manager</fullName>
            </value>
            <value>
                <fullName>Pool Member</fullName>
            </value>
            <value>
                <fullName>Fee Share</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>