force-app/main/default/objects/Reinsurer__c/fields/Signed__c.field-meta.xml
<CustomField>
    <fullName>Signed__c</fullName>
    <label>% Signed</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>