force-app/main/default/objects/Reinsurer__c/validationRules/Accepted_Reinsurers_cannot_be_edited.validationRule-meta.xml
<ValidationRule>
    <fullName>Accepted_Reinsurers_cannot_be_edited</fullName>
    <active>true</active>
    <description>Accepted placement cannot be edited</description>
    <errorConditionFormula>ISPICKVAL(Placement_Status__c, &apos;Accepted&apos;)</errorConditionFormula>
    <errorDisplayField>Placement_Status__c</errorDisplayField>
    <errorMessage>Cannot edit an accepted reinsurer placement</errorMessage>
</ValidationRule>