force-app/main/default/objects/Reinsurer__c/validationRules/Authorized_share_must_be_LE_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Authorized_share_must_be_LE_100</fullName>
    <active>true</active>
    <errorConditionFormula>Not(Authorized__c   &lt;= 100)</errorConditionFormula>
    <errorDisplayField>Authorized__c</errorDisplayField>
    <errorMessage>Authorized % must be less than or equal to 100%</errorMessage>
</ValidationRule>