force-app/main/default/objects/Reinsurer__c/validationRules/Signed_must_be_LTE_authorized.validationRule-meta.xml
<ValidationRule>
    <fullName>Signed_must_be_LTE_authorized</fullName>
    <active>true</active>
    <description>Signed must be &lt;= Authorized amount</description>
    <errorConditionFormula>Signed__c  &gt;  Authorized__c</errorConditionFormula>
    <errorDisplayField>Signed__c</errorDisplayField>
    <errorMessage>Signed share must be &lt;= Authorized share</errorMessage>
</ValidationRule>