force-app/main/default/objects/Reinsurer__c/validationRules/Validate_Reinsurer_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Reinsurer_Type</fullName>
    <active>false</active>
    <description>ensure accounts selected are either reinsurers or syndiacate</description>
    <errorConditionFormula>Not(ISPICKVAL(Reinsurer__r.Type, &quot;Reinsurer&quot;))</errorConditionFormula>
    <errorDisplayField>Reinsurer__c</errorDisplayField>
    <errorMessage>Placing entity must be Reinsurer</errorMessage>
</ValidationRule>