force-app/main/default/objects/Reinsurer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Product__c</columns>
    <columns>Layer_Placement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>