force-app/main/default/objects/Reinsurer__c/listViews/SMARRT_My_Account_Teams.listView-meta.xml
<ListView>
    <fullName>SMARRT_My_Account_Teams</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>SMARRT My Account Teams</label>
</ListView>