force-app/main/default/objects/Reinsurer__c/listViews/SMARRT_Placements.listView-meta.xml
<ListView>
    <fullName>SMARRT_Placements</fullName>
    <columns>Reinsurer_Name__c</columns>
    <columns>NAME</columns>
    <columns>Next_Layer__c</columns>
    <columns>Layer_Placement__c</columns>
    <columns>Opportunity_Product__c</columns>
    <columns>Role__c</columns>
    <columns>Authorized__c</columns>
    <columns>Signed__c</columns>
    <columns>Brokerage__c</columns>
    <columns>Placement_Status__c</columns>
    <columns>Reinsurer_Reference_Number__c</columns>
    <columns>Reinsurer_Contact__c</columns>
    <filterScope>Mine</filterScope>
    <label>SMARRT Placements</label>
</ListView>